making it better

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Game Container -->
     <div class="game-container">
+        <!-- Heads-Up Display (HUD) -->
         <div class="hud">
+            <!-- Player Stats -->
             <div class="stats">
-                Health: <span id="health">100</span>
-                Level: <span id="level">1</span>
-                Score: <span id="score">0</span>
+                <!-- Add your stats content here -->
             </div>
         </div>
         <canvas id="gameCanvas"></canvas>
